<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/back23"
    android:orientation="vertical"
    tools:context=".donated">

    <TextView
        android:id="@+id/textView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center_vertical|center_horizontal"
        android:layout_marginLeft="50dp"
        android:layout_marginTop="200dp"
        android:layout_marginRight="50dp"
        android:fontFamily="sans-serif-condensed"
        android:gravity="center"
        android:text="@string/thank_you"
        android:textColor="@color/common_google_signin_btn_text_dark_focused"
        android:textSize="36sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toTopOf="@+id/textView2"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="1.0"
        tools:layout_editor_absoluteX="99dp" />

    <TextView
        android:id="@+id/textView2"
        android:layout_width="255dp"
        android:layout_height="30dp"
        android:layout_gravity="center_horizontal"
        android:layout_marginTop="5dp"
        android:text="@string/for_being_supportive_in_a_noble_cause"
        android:textColor="@color/common_google_signin_btn_text_dark_focused"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        tools:layout_editor_absoluteY="268dp" />

    <TextView
        android:id="@+id/textView3"
        android:layout_width="107dp"
        android:layout_height="33dp"
        android:layout_gravity="center_horizontal"
        android:layout_marginTop="5dp"
        android:text="@string/you_are_the_real"
        android:textColor="@color/common_google_signin_btn_text_dark_focused"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.502"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView2" />

    <TextView
        android:id="@+id/textView4"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:layout_marginTop="0dp"
        android:fontFamily="@font/jolly_lodger"
        android:text="@string/robinhood"
        android:textColor="?android:attr/textColorLink"
        android:textSize="80sp" />

    <TextView
        android:id="@+id/textView5"
        android:layout_width="264dp"
        android:layout_height="34dp"

        android:layout_gravity="center_horizontal"
        android:layout_marginTop="20dp"
        android:fontFamily="@font/comfortaa_light"
        android:gravity="center"
        android:text="@string/we_will_contact_you_for_further_process"
        android:textColor="@android:color/background_dark"
        android:textStyle="bold" />

</LinearLayout>