<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/back"
    android:orientation="vertical"
    tools:context=".donate">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_marginBottom="1dp">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical">

            <TextView
                android:id="@+id/textView12"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_marginLeft="20dp"
                android:layout_marginTop="30dp"
                android:layout_marginRight="30dp"
                android:fontFamily="@font/bangers"
                android:text="DONATION FORM"
                android:textAllCaps="false"
                android:textAppearance="@style/TextAppearance.AppCompat.Body1"
                android:textColor="@color/common_google_signin_btn_text_light_focused"
                android:textSize="35sp"
                android:visibility="visible" />

            <EditText
                android:id="@+id/et_name"
                android:layout_width="match_parent"
                android:layout_height="match_parent"

                android:layout_gravity="center_horizontal"
                android:layout_marginLeft="25dp"
                android:layout_marginTop="30dp"
                android:layout_marginRight="25dp"
                android:background="@android:drawable/screen_background_light_transparent"
                android:ems="10"
                android:gravity="left"
                android:hint="@string/name"
                android:inputType="textPersonName"
                android:soundEffectsEnabled="false"
                android:textColor="@android:color/background_dark"
                android:textColorHint="@color/colorPrimaryDark"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <EditText
                android:id="@+id/et_email"
                android:layout_width="match_parent"
                android:layout_height="match_parent"


                android:layout_gravity="center_horizontal"
                android:layout_marginLeft="25dp"
                android:layout_marginTop="30dp"
                android:layout_marginRight="25dp"
                android:background="@android:drawable/screen_background_light_transparent"
                android:ems="10"
                android:gravity="left"
                android:hint="@string/e_mail"
                android:inputType="textEmailAddress"
                android:textColor="@android:color/background_dark"
                android:textColorHint="@color/colorPrimaryDark"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/et_name" />

            <EditText
                android:id="@+id/et_phone"
                android:layout_width="match_parent"
                android:layout_height="match_parent"


                android:layout_gravity="center_horizontal"
                android:layout_marginLeft="25dp"
                android:layout_marginTop="30dp"
                android:layout_marginRight="25dp"
                android:background="@android:drawable/screen_background_light_transparent"
                android:ems="10"
                android:gravity="left"
                android:hint="@string/phone_number"
                android:inputType="phone"
                android:textColor="@android:color/background_dark"
                android:textColorHint="@color/colorPrimaryDark"
                app:layout_constraintBottom_toTopOf="@+id/et_address"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.502"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/et_email"
                app:layout_constraintVertical_bias="0.0" />

            <EditText
                android:id="@+id/et_address"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"

                android:layout_gravity="center_horizontal"
                android:layout_marginLeft="25dp"
                android:layout_marginTop="30dp"
                android:layout_marginRight="25dp"
                android:background="@android:drawable/screen_background_light_transparent"
                android:ems="10"
                android:gravity="left"
                android:hint="@string/pickup_address"
                android:inputType="textPostalAddress"
                android:textColor="@android:color/background_dark"
                android:textColorHint="@color/colorPrimaryDark" />

            <EditText
                android:id="@+id/et_desc"
                style="@style/Widget.AppCompat.Light.AutoCompleteTextView"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"


                android:layout_gravity="center_horizontal"
                android:layout_marginLeft="25dp"
                android:layout_marginTop="30dp"
                android:layout_marginRight="25dp"
                android:background="@android:drawable/screen_background_light_transparent"
                android:ems="10"
                android:gravity="left"
                android:hint="@string/cloth_description"
                android:inputType="textMultiLine"
                android:textColor="@android:color/background_dark"
                android:textColorHint="@color/colorPrimaryDark" />

            <EditText
                android:id="@+id/et_quantity"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"


                android:layout_gravity="center_horizontal"
                android:layout_marginLeft="25dp"
                android:layout_marginTop="30dp"
                android:layout_marginRight="25dp"
                android:layout_marginBottom="28dp"
                android:background="@android:drawable/screen_background_light_transparent"
                android:ems="10"
                android:gravity="left"
                android:hint="@string/quantity"
                android:inputType="phone"
                android:textColor="@android:color/background_dark"
                android:textColorHint="@color/colorPrimaryDark" />

            <Button
                android:id="@+id/donate"
                style="?attr/borderlessButtonStyle"
                android:layout_width="361dp"
                android:layout_height="wrap_content"

                android:layout_gravity="center_horizontal"
                android:layout_marginTop="50dp"
                android:layout_marginBottom="30dp"
                android:background="@drawable/round_button"
                android:drawableLeft="@drawable/ic_card_giftcard_black_24dp"
                android:drawableRight="@drawable/ic_card_giftcard_black_24dp"
                android:ellipsize="start"
                android:fontFamily="@font/coda"
                android:paddingLeft="30dp"
                android:paddingTop="20dp"
                android:paddingRight="30dp"
                android:paddingBottom="20dp"
                android:soundEffectsEnabled="false"
                android:text="@string/donate"
                android:textAllCaps="false"
                android:textAppearance="@style/TextAppearance.AppCompat"
                android:textColor="@android:color/black"
                android:textColorHint="@color/colorPrimaryDark"
                android:textSize="15sp"
                android:textStyle="bold"
                android:visibility="visible" />

        </LinearLayout>


</ScrollView>

</LinearLayout>