<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#ECEBF3"
    android:orientation="vertical">


    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <TextView
                android:id="@+id/textView15"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="15dp"
                android:layout_marginTop="30dp"
                android:layout_marginRight="15dp"
                android:fontFamily="@font/coda"
                android:gravity="center"
                android:text="Customer Feedback Form"
                android:textColor="@color/common_google_signin_btn_text_dark_focused"
                android:textSize="22sp"
                android:textStyle="bold" />

            <EditText
                android:id="@+id/t1"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="20dp"
                android:layout_marginTop="20dp"
                android:layout_marginRight="20dp"
                android:ems="10"
                android:hint="@string/name"
                android:inputType="textPersonName"
                android:textColor="@color/colorPrimaryDark"
                android:textColorHint="@android:color/darker_gray"
                android:textColorLink="@android:color/black"
                android:textSize="20sp" />

            <EditText
                android:id="@+id/t2"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="20dp"
                android:layout_marginTop="20dp"
                android:layout_marginRight="20dp"
                android:ems="10"
                android:hint="@string/e_mail"
                android:inputType="textEmailAddress"
                android:textColor="@color/colorPrimaryDark"
                android:textColorHint="@android:color/darker_gray"
                android:textColorLink="@android:color/black"
                android:textSize="20sp" />

            <EditText
                android:id="@+id/t3"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="20dp"
                android:layout_marginTop="20dp"
                android:layout_marginRight="20dp"
                android:ems="10"
                android:hint="Subject"
                android:inputType="textPersonName"
                android:textColor="@color/colorPrimaryDark"
                android:textColorHint="@android:color/darker_gray"
                android:textColorLink="@android:color/black"
                android:textSize="20sp" />

            <EditText
                android:id="@+id/t4"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="20dp"
                android:layout_marginTop="20dp"
                android:layout_marginRight="20dp"
                android:ems="10"
                android:hint="Message"
                android:inputType="textPersonName"
                android:textColor="@color/colorPrimaryDark"
                android:textColorHint="@android:color/darker_gray"
                android:textColorLink="@android:color/black"
                android:textSize="20sp" />

            <Button
                android:id="@+id/btsb"
                style="?attr/borderlessButtonStyle"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="60dp"
                android:layout_marginTop="40dp"
                android:layout_marginRight="60dp"
                android:layout_marginBottom="20dp"
                android:background="@drawable/round_button"
                android:text="@string/submit"
                android:textColor="#FFFFFF"
                android:textStyle="bold" />

        </LinearLayout>
    </ScrollView>

</LinearLayout>