<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:background="@drawable/back23"
    android:orientation="vertical"
    tools:context=".MainActivity">


    <ScrollView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentStart="true"
        android:layout_alignParentTop="true"
        android:layout_marginStart="0dp"
        android:layout_marginTop="0dp">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <HorizontalScrollView
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_alignParentStart="true"
                android:layout_alignParentTop="true"
                android:layout_marginStart="0dp"
                android:layout_marginTop="0dp">

                <LinearLayout
                    android:layout_width="wrap_content"
                    android:layout_height="match_parent"
                    android:orientation="horizontal">

                    <ImageView
                        android:id="@+id/imageView"
                        android:layout_width="415dp"
                        android:layout_height="285dp"
                        android:layout_alignParentStart="true"
                        android:layout_alignParentTop="true"
                        android:layout_marginStart="0dp"
                        android:layout_marginTop="0dp"
                        app:srcCompat="@drawable/image2a" />

                    <ImageView
                        android:id="@+id/imageView2"
                        android:layout_width="415dp"
                        android:layout_height="285dp"
                        android:layout_alignParentStart="true"
                        android:layout_alignParentTop="true"
                        android:layout_marginStart="0dp"
                        android:layout_marginTop="3dp"
                        app:srcCompat="@drawable/image1" />

                </LinearLayout>
            </HorizontalScrollView>

            <TextView
                android:id="@+id/textView6"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_alignParentStart="true"
                android:layout_alignParentLeft="true"
                android:layout_alignParentEnd="true"
                android:layout_alignParentRight="true"
                android:layout_alignParentBottom="true"
                android:layout_marginStart="39dp"
                android:layout_marginLeft="39dp"
                android:layout_marginTop="15dp"
                android:layout_marginEnd="34dp"
                android:layout_marginRight="34dp"
                android:layout_marginBottom="20dp"
                android:background="@color/colortext"
                android:fontFamily="@font/antic_slab"
                android:foregroundGravity="center_horizontal"
                android:gravity="center_horizontal"
                android:text="@string/n1"
                android:textColor="@color/common_google_signin_btn_text_light_focused"
                android:textSize="20sp"
                android:typeface="normal"
                android:visibility="visible" />

            <ImageView
                android:id="@+id/imageView3"
                android:layout_width="match_parent"
                android:layout_height="285dp"
                android:layout_marginLeft="5dp"
                android:layout_marginTop="10dp"
                android:layout_marginRight="5dp"
                android:layout_marginBottom="10dp"
                app:srcCompat="@drawable/stats" />

            <TextView
                android:id="@+id/textView8"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="20dp"
                android:layout_marginTop="20dp"
                android:layout_marginRight="20dp"
                android:background="@color/colorhead"
                android:fadingEdge="vertical"
                android:fontFamily="sans-serif"
                android:gravity="center_horizontal"
                android:password="false"
                android:text="@string/vision"
                android:textColor="@android:color/black"
                android:textSize="30sp"
                android:textStyle="bold"
                android:visibility="visible" />

            <TextView
                android:id="@+id/textView7"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal"
                android:layout_marginLeft="20dp"
                android:layout_marginTop="10dp"
                android:layout_marginRight="20dp"
                android:background="@color/colortext"
                android:fontFamily="@font/antic_slab"
                android:gravity="center_horizontal"
                android:text="@string/n2"
                android:textColor="@color/common_google_signin_btn_text_dark_focused"
                android:textSize="18sp"
                android:visibility="visible" />

            <ImageView
                android:id="@+id/imageView4"
                android:layout_width="match_parent"
                android:layout_height="285dp"
                android:layout_marginLeft="20dp"
                android:layout_marginRight="20dp"
                android:scaleType="fitXY"
                app:srcCompat="@drawable/stat2" />

            <TextView
                android:id="@+id/textView9"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="20dp"
                android:layout_marginTop="20dp"
                android:layout_marginRight="20dp"
                android:background="@color/colorhead"
                android:gravity="center_horizontal"
                android:text="@string/about_us"
                android:textColor="@color/common_google_signin_btn_text_dark_focused"
                android:textSize="30sp"
                android:textStyle="bold"
                android:typeface="normal"
                android:visibility="visible" />

            <TextView
                android:id="@+id/textView10"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="20dp"
                android:layout_marginTop="10dp"
                android:layout_marginRight="20dp"
                android:background="@color/colortext"
                android:fontFamily="@font/antic_slab"
                android:gravity="center_horizontal"
                android:text="@string/abt_us"
                android:textColor="@android:color/background_dark"
                android:textSize="18sp"
                android:visibility="visible" />

            <TextView
                android:id="@+id/textView11"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal"
                android:layout_marginLeft="20dp"
                android:layout_marginTop="10dp"
                android:layout_marginRight="20dp"
                android:background="@color/colorhead"
                android:gravity="center_horizontal"
                android:text="@string/registeredngo"
                android:textColor="@color/common_google_signin_btn_text_dark_focused"
                android:textSize="30sp"
                android:textStyle="bold"
                android:visibility="visible" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="horizontal">

                <ImageView
                    android:id="@+id/imageView6"
                    android:layout_width="100dp"
                    android:layout_height="100dp"
                    android:layout_weight="1"
                    app:srcCompat="@drawable/ngoa" />

                <ImageView
                    android:id="@+id/imageView9"
                    android:layout_width="100dp"
                    android:layout_height="100dp"
                    android:layout_weight="1"
                    app:srcCompat="@drawable/ngo1" />

            </LinearLayout>

            <TextView
                android:id="@+id/textView13"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal"
                android:layout_marginLeft="20dp"
                android:layout_marginTop="10dp"
                android:layout_marginRight="20dp"
                android:background="@color/colorhead"
                android:gravity="center_horizontal"
                android:text="@string/contact"
                android:textColor="@color/common_google_signin_btn_text_dark_focused"
                android:textSize="30sp"
                android:textStyle="bold"
                android:visibility="visible" />

            <Button
                android:id="@+id/call_btn"
                android:layout_width="match_parent"
                android:layout_height="40dp"
                android:layout_marginLeft="25dp"
                android:layout_marginTop="15dp"
                android:layout_marginRight="30dp"
                android:layout_weight="1"
                android:background="@color/colortext"
                android:gravity="left|center_vertical"
                android:paddingLeft="20dp"
                android:paddingTop="1dp"
                android:paddingRight="2dp"
                android:paddingBottom="1dp"
                android:text="XXXXX-XXXXX"
                android:textColor="@android:color/background_dark" />

            <Button
                android:id="@+id/mail_btn"
                android:layout_width="match_parent"
                android:layout_height="40dp"
                android:layout_marginLeft="25dp"
                android:layout_marginRight="30dp"
                android:layout_marginBottom="30dp"
                android:layout_weight="1"
                android:background="@color/colortext"
                android:gravity="left|center_vertical"
                android:paddingLeft="20dp"
                android:paddingTop="1dp"
                android:paddingRight="5dp"
                android:paddingBottom="1dp"
                android:text="robinhood@gmail.com"
                android:textColor="@android:color/background_dark" />

        </LinearLayout>
    </ScrollView>

    <android.support.constraint.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_alignParentStart="true"
        android:layout_alignParentTop="true"
        android:layout_marginStart="0dp"
        android:layout_marginTop="0dp">

        <android.support.design.widget.FloatingActionButton
            android:id="@+id/fab"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="8dp"
            android:layout_marginTop="8dp"
            android:layout_marginEnd="8dp"
            android:layout_marginBottom="44dp"
            android:background="@android:color/background_dark"
            android:clickable="true"
            android:foregroundGravity="fill_vertical|fill_horizontal|center"
            android:scaleX="1.5"
            android:scaleY="1.5"
            android:tint="@color/colorPrimary"
            android:visibility="visible"
            app:backgroundTint="@color/colorPrimary"
            app:backgroundTintMode="src_over"
            app:elevation="30dp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.873"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintVertical_bias="1.0"
            app:rippleColor="@android:color/darker_gray"
            app:srcCompat="@drawable/icon" />

        <android.support.design.widget.FloatingActionButton
            android:id="@+id/fab_2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="8dp"
            android:layout_marginLeft="8dp"
            android:layout_marginEnd="8dp"
            android:layout_marginRight="8dp"
            android:layout_marginBottom="24dp"
            android:clickable="true"
            android:scaleX="1.2"
            android:scaleY="1.2"
            android:visibility="invisible"
            app:backgroundTint="@android:color/white"
            app:elevation="30dp"
            app:layout_constraintBottom_toTopOf="@+id/fab"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.873"
            app:layout_constraintStart_toStartOf="parent"
            app:srcCompat="@drawable/ic_feedback_black_24dp" />

        <android.support.design.widget.FloatingActionButton
            android:id="@+id/fab_3"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="8dp"
            android:layout_marginLeft="8dp"
            android:layout_marginTop="8dp"
            android:layout_marginEnd="8dp"
            android:layout_marginRight="8dp"
            android:layout_marginBottom="8dp"
            android:clickable="true"
            android:scaleX="1"
            android:scaleY="1"
            android:visibility="invisible"
            app:backgroundTint="@android:color/background_light"
            app:elevation="30dp"
            app:layout_constraintBottom_toTopOf="@+id/fab_2"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.873"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintVertical_bias="0.984"
            app:srcCompat="@drawable/ic_group_add_black_24dp" />
    </android.support.constraint.ConstraintLayout>

</RelativeLayout>